<resources>
    <string name="app_name">Patient Management System</string>
    <string name="doctor_login">Doctor Login</string>
    <string name="user">Enter UserName</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add_patient">Add Patient</string>
    <string name="search_by_name">Search By Name</string>
    <string name="fistname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="save_and_procced">Save and Proceed</string>
    <string name="search_by_date">Search By Date</string>
    <string name="generate_registration_code">Generate Registration Code</string>
    <string name="medical_input">Medical Input</string>
    <string name="condition">Condition</string>
    <string name="medication">Medication</string>
    <string name="enter_note">Enter Note</string>
    <string name="save">Save</string>
    <string name="registration_code">Registration Code</string>
    <string name="registration_date">Date of Registration</string>
    <string name="firstname">First Name</string>
    <string name="select_date">Select Date</string>
</resources>
