<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/MyColor"
    tools:context="maneesh.com.patientmanagementsystem.SearchByNameActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtSearchFirstName"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/firstname"/>

        <EditText
            android:id="@+id/edtSearchLastName"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/last_name"/>

        <Button
            android:id="@+id/btnSearchByName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClickSearch"
            android:text="@string/search"></Button>


    </LinearLayout>

    <ListView
        android:id="@+id/patient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>